fix: adjusted edit task bar position for proper overlap so that auto margin work on section tag

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@ main{
 section {
     display: flex;
     justify-content: space-around;
-    position: absolute;
 }
 
 /* Div for To Do */
@@ -76,7 +75,11 @@ section {
     margin: auto;
     padding-bottom: 0.1em;
     background-color: #d3d7db;
-    position: relative;
+    position: absolute;
+    top: 15.5%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 .editTask-navbar{
     width: 100%;
